# SentencesGenerator

./: CMakeLists.txt  N-aryCharTree.c  N-aryCharTree.h  README.md  README.txt  automaticgenerator.c  automaticgenerator.h  displayTree.c  displayTree.h  extracCat.c  extracFB.c  extracFF.c  extracInfos.c  journal.md  main.c  node.c  node.h  readDico.c
